# Stellar

./: CMakeLists.txt  Render.cpp  main.cpp  main_backup.cpp
src/: Camera.cpp  Scene.cpp  Shaders.cpp  glad.c
src/Model/: CMakeLists.txt  Group.cpp  Mesh.cpp  Model.cpp
src/Render/: cube_tex.cpp  cube_tex_debug.cpp  debug.cpp  diffuse_ibl_map.cpp  equirectangular.cpp  normal.cpp  pbr.cpp  shadow.cpp  skybox.cpp  spec_ibl_map.cpp  test.cpp
src/include/: Animator.h  Camera.h  Exceptions.h  Group.h  Light.h  Material.h  Model.h  Object.h  Render.h  Scene.h  Shader.h  Shaders.h  Transform.h  loaders.h  macro.h
src/loader/: scene_loader.cpp  scene_loader_functions.cpp  scene_loader_functions.h  texture_loader.cpp
src/shaders/basic-pbr/: f.glsl  indirectf.glsl  v.glsl
src/shaders/cube-tex/: g.glsl  v.glsl
src/shaders/cube-tex-debug/: f.glsl  g.glsl  v.glsl
src/shaders/debug/: f.glsl  g.glsl
src/shaders/diffuse-ibl-map/: f.glsl
src/shaders/equirectangular/: f.glsl
src/shaders/one-point-light-shadowed/: f.glsl  v.glsl
src/shaders/plain/: f.glsl  v.glsl
src/shaders/shadertoy/: worms.glsl
src/shaders/shadow/: point_light_f.glsl  point_light_g.glsl  point_light_v.glsl
src/shaders/skybox/: f.glsl  v.glsl
src/shaders/spec-ibl-map/: f.glsl
